RASS-52 handle no time set

--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -20,7 +20,7 @@
                             text: "Next hearing date"
                         },
                             value: {
-                            text: courtAppearance.nextHearingDate | formatDateTime
+                            text: courtAppearance.nextHearingDate | formatDateTime(courtAppearance.nextHearingTimeSet)
                         },
                             actions: {
                             items: [
