RASS-58 added check offence answers page

--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -11,5 +11,6 @@ $govuk-page-width: $moj-page-width;
 @import './components/header-bar';
 @import './components/service-header';
 @import './components/prisoner-banner';
+@import './components/offence-card';
 @import './components/footer';
 @import 'assets/scss/local';
