--- a/server/views/partials/prisonerBannerLayout.njk
+++ b/server/views/partials/prisonerBannerLayout.njk
@@ -47,12 +47,13 @@
                     href: '#'
                 }]
             }) }}    
-            
-            {{ govukBackLink({
-                text: "Back",
-                href: backLink,
-                classes: 'govuk-!-margin-top-0'
-            }) }}
+            {% if backLink %}
+                {{ govukBackLink({
+                    text: "Back",
+                    href: backLink,
+                    classes: 'govuk-!-margin-top-0'
+                }) }}
+            {% endif %}
 
             {% block content %}{% endblock %}
         </div>
