RASS-57 added common appearance detail layout

--- a/server/views/components/offenceCard/template.njk
+++ b/server/views/components/offenceCard/template.njk
@@ -29,8 +29,8 @@
     </div>
     <div class="offence-card-actions">
         <ul class="offence-card-actions-list">
-            <li class="offence-card-action-link"><a href="/person/{{ params.nomsId }}/court-cases/{{ params.courtCaseReference }}/offence/{{ params.offenceReference }}/offence-code" class="govuk-link">Edit</a></li>
-            <li class="offence-card-action-link"><a href="/person/{{ params.nomsId }}/court-cases/{{ params.courtCaseReference }}/offence/{{ params.offenceReference }}/delete-offence" class="govuk-link">Delete</a></li>
+            <li class="offence-card-action-link"><a href="/person/{{ params.nomsId }}/court-cases/{{ params.courtCaseReference }}/offences/{{ params.offenceReference }}/offence-code" class="govuk-link">Edit</a></li>
+            <li class="offence-card-action-link"><a href="/person/{{ params.nomsId }}/court-cases/{{ params.courtCaseReference }}/offences/{{ params.offenceReference }}/delete-offence" class="govuk-link">Delete</a></li>
         </ul>
     </div>
 </div>
