--- a/server/views/pages/offence/offence-outcome.njk
+++ b/server/views/pages/offence/offence-outcome.njk
@@ -1,14 +1,10 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-
-
 {% set pageTitle = applicationName + " - Add a offence outcome" %}
 
-{% block content %}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
+{% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/offences/{{ offenceReference }}/submit-offence-outcome">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <span class="govuk-caption-l">Add an offence to court case {{ courtCaseReference }}</span>
@@ -68,8 +64,5 @@
                     text: "Continue"
                 }) }}
             </form>
-
-        </div>
-    </div>
 
 {% endblock %}
