--- a/server/views/pages/offence/lookup-offence-outcome.njk
+++ b/server/views/pages/offence/lookup-offence-outcome.njk
@@ -1,15 +1,11 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
-
-
 
 {% set pageTitle = applicationName + " - Lookup a court case outcome" %}
 
 
-{% block content %}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
+{% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/offences/{{ offenceReference }}/submit-lookup-offence-outcome">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <span class="govuk-caption-l">Add an offence to court case {{ courtCaseReference }}</span>
@@ -68,9 +64,6 @@
                     text: "Continue"
                 }) }}
             </form>
-
-        </div>
-    </div>
 
 {% endblock %}
 
