--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -12,5 +12,6 @@ $govuk-page-width: $moj-page-width;
 @import './components/service-header';
 @import './components/prisoner-banner';
 @import './components/offence-card';
+@import './components/offence-summary';
 @import './components/footer';
 @import 'assets/scss/local';
