RASS-66 case id everywhere

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -10,7 +10,7 @@
         <div class="govuk-grid-column-full">
         {{ govukButton({
             text: "Add a court case",
-            href: "/person/" + nomsId + "/court-cases/reference"
+            href: "/person/" + nomsId + "/court-cases/" + newCourtCaseId + "/reference"
         }) }}
         </div>
     </div>
