--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -24,7 +24,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/reference?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/court-cases/" + courtCaseReference + "/reference?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "court case reference number"
                                 }
@@ -41,7 +41,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/court-name?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/court-cases/" + courtCaseReference + "/court-name?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "court name"
                                 }
@@ -58,7 +58,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/warrant-date?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/court-cases/" + courtCaseReference + "/warrant-date?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "warrant date"
                                 }
@@ -75,7 +75,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/overall-case-outcome?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/court-cases/" + courtCaseReference + "/overall-case-outcome?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "overall case outcome"
                                 }
@@ -89,7 +89,7 @@
             <h2 class="govuk-heading-m">Now add the offences for this appearance</h2>
             <p class="govuk-body">You will need to enter all of the offence information from the warrant.</p>
 
-            <form method="post" action="/person/{{ nomsId }}/court-cases/submit-check-answers">
+            <form method="post" action="/person/{{ nomsId }}/court-cases/{{courtCaseReference}}/submit-check-answers">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {{ govukButton({
                     text: "Confirm and continue"
