--- a/server/views/pages/courtAppearance/next-hearing-select.njk
+++ b/server/views/pages/courtAppearance/next-hearing-select.njk
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/submit-next-hearing-select">
+            <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-next-hearing-select">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <span class="govuk-caption-l">Add an appearance to court case {{ courtCaseReference }}</span>
                 {{ govukRadios({
