--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -64,7 +64,7 @@
                             actions: {
                                 items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/" + courtCase.uniqueIdentifier + "/appearance/"+ courtCase.appearances | length + "/reference",
+                                    href: "/person/" + nomsId + "/court-cases/" + courtCase.uniqueIdentifier + "/appearance/"+ courtCase.appearances | length + "/select-reference",
                                     text: "Add an appearance",
                                     visuallyHiddenText: "Add an appearance"
                                 }]
