RASS-65 RASS-67 RASS-70 RASS-71 RASS-72 conditional caption content

--- a/server/views/pages/courtAppearance/lookup-case-outcome.njk
+++ b/server/views/pages/courtAppearance/lookup-case-outcome.njk
@@ -12,7 +12,13 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-lookup-case-outcome">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">Add a court case</span>
+                <span class="govuk-caption-l">
+                    {% if isFirstAppearance %}
+                        Add a court case
+                        {% else %}
+                        Add an appearance to court case {{courtCaseUniqueIdentifier}}
+                    {% endif %}
+                </span>
                 {{ govukSelect({
                     label: {
                         text: "Look up an outcome",
