--- a/server/views/pages/courtAppearance/case-outcome-applied-all.njk
+++ b/server/views/pages/courtAppearance/case-outcome-applied-all.njk
@@ -12,7 +12,13 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-case-outcome-applied-all">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">Add a court case</span>
+                <span class="govuk-caption-l">
+                    {% if isFirstAppearance %}
+                        Add a court case
+                        {% else %}
+                        Add an appearance to court case {{courtCaseUniqueIdentifier}}
+                    {% endif %}
+                </span>
                 {{ govukRadios({
                     name: "caseOutcomeAppliedAll",
                     fieldset: {
