--- a/server/views/pages/courtAppearance/select-court-name.njk
+++ b/server/views/pages/courtAppearance/select-court-name.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{% set pageTitle = applicationName + " - Same case reference number page" %}
+{% set pageTitle = applicationName + " - Same court name page" %}
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
@@ -10,16 +10,16 @@
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <span class="govuk-caption-l">Add an appearance to court case {{ courtCaseUniqueIdentifier }}</span>
                 {{ govukRadios({
-                    name: "referenceNumberSelect",
+                    name: "courtNameSelect",
                     fieldset: {
                         legend: {
-                        text: "Did this appearance use the same case reference number?",
+                        text: "Was the appearance at this court?",
                         isPageHeading: true,
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
                     hint: {
-                        text: lastCaseReferenceNumber
+                        text: lastCourtName
                     },
                     items: [
                         {
