--- a/server/views/pages/offence/offence-name.njk
+++ b/server/views/pages/offence/offence-name.njk
@@ -7,7 +7,13 @@
 {% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-name">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">Add an offence to court case {{ courtCaseReference }}</span>
+                <span class="govuk-caption-l">
+                    {% if isFirstAppearance %}
+                        Add an offence to court case {{ courtCaseUniqueIdentifier }}
+                        {% else %}
+                        Add an appearance to court case {{ courtCaseUniqueIdentifier }}
+                    {% endif %}
+                </span>
 
                 {{ govukSelect({
                     label: {
