RASS-84 updated content and redirect

--- a/server/views/pages/courtAppearance/next-hearing-select.njk
+++ b/server/views/pages/courtAppearance/next-hearing-select.njk
@@ -27,7 +27,7 @@
                     items: [
                         {
                             value: "true",
-                            text: "Yes",
+                            text: "Yes, it has been set",
                             checked: nextHearingSelect === true
                         },
                         {
